# ai-testing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  dashboard.py  metrics.py  projects.py  runs.py  testcases.py  tools.py  users.py
app/core/: bootstrap.py  config.py  db.py  security.py
app/models/: __init__.py  evaluation.py  metric.py  project.py  project_membership.py  report.py  test_case.py  user.py
app/providers/: llm.py
app/schemas/: dashboard.py  evaluation.py  llm_validation.py  metric.py  project.py  report.py  user.py
app/services/: dashboard.py  docx_generator.py  evaluation.py  llm.py  report.py
docs/: deployment.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  AuthContext.jsx  Layout.jsx  Login.jsx  NewProject.jsx  NewTestCase.jsx  ProjectDashboard.jsx  ProjectDetail.jsx  ProjectsList.jsx  Register.jsx  Settings.jsx  TestCaseDashboard.jsx  TestCaseDetail.jsx  index.css
scripts/: gcs_upload_db.sh  migrate_auth.py  migrate_prod_full.py  seed_db.py
tests/: conftest.py  test_bootstrap.py  test_dashboard.py  test_evaluation.py  test_invariants.py  test_judge.py  test_llm_integration.py  test_metric_design.py  test_report.py  test_schemas.py
